--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
 
-
+  label, input, button, h1 {
+    display: block;
+    text-align: center;
+    margin-bottom: 5px;
+  }
